--- a/WindowsFormsApp1/StudentManagemant.csproj
+++ b/WindowsFormsApp1/StudentManagemant.csproj
@@ -139,11 +139,11 @@
     <Compile Include="View\TeacherForm.Designer.cs">
       <DependentUpon>TeacherForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\Timetableform.cs">
+    <Compile Include="View\TimetableForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\Timetableform.Designer.cs">
-      <DependentUpon>Timetableform.cs</DependentUpon>
+    <Compile Include="View\TimetableForm.Designer.cs">
+      <DependentUpon>TimetableForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -184,8 +184,8 @@
     <EmbeddedResource Include="View\TeacherForm.resx">
       <DependentUpon>TeacherForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\Timetableform.resx">
-      <DependentUpon>Timetableform.cs</DependentUpon>
+    <EmbeddedResource Include="View\TimetableForm.resx">
+      <DependentUpon>TimetableForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
